--- a/index.html
+++ b/index.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Meu Site</title>
-    </head>
+<html lang="pt-br">
 
-    <body>
-        <div id="app">  
-            <header>
-                <img src="./assets/logo.svg" alt="Logo da nlw">
-            </header>
-            <main id="cards">
-                <div class="card">
-                    <h2>24/11 <span>quinta</span></h2>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calendário de Jogos - NLW Copa</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
 
-                    <ul>
-                        <li>
-                            <img src="./assets/icon-brazil.svg" alt="Bandeira do Brasil">
-                            <strong>16:00</strong>
-                            <img src="./assets/icon-serbia.svg" alt="Bandeira da Servia">
-                        </li>
-                    </ul>
-                </div>
-            </main>
-        </div>
-    </body>
+<body>
+    <div id="app">
+    </div>
+    <script src="./script.js"></script>
+</body>
+
 </html>
