--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <body>
     <div id="app">
+        <header>
+            <img src="./assets/logo.svg" alt="Logo da nlw">
+        </header>
+        <main id="cards">
+
+        </main>
     </div>
     <script src="./script.js"></script>
 </body>
